Tue Jun 28 11:45:30 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rake:  Update rake to fix some bugs and hide deprecated features
	  from RDoc.
	* lib/rake/version.rb:  Bump version to 0.9.2.1 to distinguish it from
	  the released version.
	* NEWS:  ditto

Tue Jun 28 11:17:28 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc 3.7 (final)
	* NEWS:  ditto

Tue Jun 28 10:18:42 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (rb_daemon): fix wrong #endif position.

Tue Jun 28 07:50:32 2011  Eric Hodel  <drbrain@segment7.net>

	* object.c (Init_Object):  Teach RDoc what Init_class_hierarchy does to
	  hook up ri for BasicObject, Object, Module and Class.

Tue Jun 28 05:03:32 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* thread.c (rb_thread_local_aref): RDoc fix. Thread#[] example
	  had a race. See #4480.

Tue Jun 28 01:22:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_log): move BigMath.log from
	  bigdecimal/math.rb.

	* ext/bigdecimal/lib/bigdecimal/math.rb: ditto.

	* test/bigdecimal/test_bigdecimal.rb: move test for BigMath.log from
	  test/bigdecimal/test_bigmath.rb.

	* test/bigdecimal/test_bigmath.rb: ditto.

Tue Jun 28 01:19:52 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: fix [Bug #4232].

Tue Jun 28 00:14:13 2011  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: fix [Bug #4409]. add DRbServer#here?.

	* test/drb/test_drb.rb: ditto.

	* test/drb/drbtest.rb: ditto.

	* test/drb/ut_eq.rb: ditto.

Tue Jun 28 00:08:43 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/workspace.rb: fix BUG#4793.

Mon Jun 27 22:06:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (consume_communication_pipe): don't use C99
	  style variable length array.

Mon Jun 27 22:04:27 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (consume_communication_pipe): change return
	  type to void. caller doesn't use it.
